--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.5",
     "@react-pdf/renderer": "^4.2.1",
+    "axios": "^1.7.9",
     "bcryptjs": "^3.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
